--- a/index.html
+++ b/index.html
@@ -1,67 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Angular2 Minesweeper by Daniel Pan</title>
+  <title>Angular2 Minesweeper by Daniel Pan</title>
 
-    <meta name="description" content="Angular2 Minesweeper by Daniel Pan">
+  <meta name="description" content="Angular2 Minesweeper by Daniel Pan">
+
+  
+  <!-- Configured Head Tags  -->
+  <link rel="apple-touch-icon" sizes="57x57" href="ng2-minesweeper/dist/assets/icon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="ng2-minesweeper/dist/assets/icon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="ng2-minesweeper/dist/assets/icon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="ng2-minesweeper/dist/assets/icon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="ng2-minesweeper/dist/assets/icon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="ng2-minesweeper/dist/assets/icon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="ng2-minesweeper/dist/assets/icon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="ng2-minesweeper/dist/assets/icon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="ng2-minesweeper/dist/assets/icon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="ng2-minesweeper/dist/assets/icon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="ng2-minesweeper/dist/assets/icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="ng2-minesweeper/dist/assets/icon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="ng2-minesweeper/dist/assets/icon/favicon-16x16.png">
+	<link rel="manifest" href="ng2-minesweeper/dist/assets/manifest.json">
+	<meta name="msapplication-TileColor" content="#00bcd4">
+	<meta name="msapplication-TileImage" content="ng2-minesweeper/dist/assets/icon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#00bcd4">
+  
+
+  <!-- base url -->
+  <base href="/">
 
 
-    <!-- Configured Head Tags  -->
-    <link rel="apple-touch-icon" sizes="57x57" href="./ng2-minesweeper/dist/assets/icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./ng2-minesweeper/dist/assets/icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./ng2-minesweeper/dist/assets/icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./ng2-minesweeper/dist/assets/icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./ng2-minesweeper/dist/assets/icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./ng2-minesweeper/dist/assets/icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./ng2-minesweeper/dist/assets/icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./ng2-minesweeper/dist/assets/icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./ng2-minesweeper/dist/assets/icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./ng2-minesweeper/dist/assets/icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./ng2-minesweeper/dist/assets/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./ng2-minesweeper/dist/assets/icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./ng2-minesweeper/dist/assets/icon/favicon-16x16.png">
-    <link rel="manifest" href="./ng2-minesweeper/dist/assets/manifest.json">
-    <meta name="msapplication-TileColor" content="#00bcd4">
-    <meta name="msapplication-TileImage" content="./ng2-minesweeper/dist/assets/icon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#00bcd4">
-
-
-    <!-- base url -->
-    <base href="/">
-
-
-    <link href="./ng2-minesweeper/dist/main.e701d9a0b0daf6e6d9a2a5eee198ef12.css" rel="stylesheet">
-    <script type="text/javascript" src="./ng2-minesweeper/dist/polyfills.7392cade6b1036088196.bundle.js" defer></script>
-    <script type="text/javascript" src="./ng2-minesweeper/dist/main.f4ff7a694c46bd318e64.bundle.js" defer></script>
-</head>
+<link href="ng2-minesweeper/dist/main.e701d9a0b0daf6e6d9a2a5eee198ef12.css" rel="stylesheet"><script type="text/javascript" src="ng2-minesweeper/dist/polyfills.7392cade6b1036088196.bundle.js" defer></script><script type="text/javascript" src="ng2-minesweeper/dist/main.15899d77fef53f47a1b8.bundle.js" defer></script></head>
 
 <body>
 
-<app>
+  <app>
     Loading...
-</app>
+  </app>
 
-<!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
-<script>
-    (function (A, n, g, u, l, a, r) {
-        A.GoogleAnalyticsObject = r;
-        A[l] = A[l] || function () {
-                (A[l].q = A[l].q || []).push(arguments)
-            }, A[l].l = 1 * new Date();
-        a = n.createElement(g),
-            r = n.getElementsByTagName(g)[0];
-        a.async = 1;
-        a.src = u;
-        r.parentNode.insertBefore(a, r)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
+  <script>
+    (function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=r;A[l]=A[l]||function(){
+    (A[l].q=A[l].q||[]).push(arguments)},A[l].l=1*new Date();a=n.createElement(g),
+    r=n.getElementsByTagName(g)[0];a.async=1;a.src=u;r.parentNode.insertBefore(a,r)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-71073175-1', 'auto');
     ga('send', 'pageview');
-</script>
+  </script>
+
+  
 
 
 </body>
